--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-cloud.aws.credentials.access-key=AKIA56DW2FUYMBUD2X5C
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=XXX
+cloud.aws.credentials.secret-key=XXX
 cloud.aws.region.static=us-east-1
 cloud.aws.stack.auto=false
 
